滑雪场图片

--- a/FlaskWebProject1/FlaskWebProject1/static/markdown/团建.md
+++ b/FlaskWebProject1/FlaskWebProject1/static/markdown/团建.md
@@ -1,2 +1,31 @@
-# 滑雪+火锅+温泉 团建攻略
+# 滑雪+聚餐+温泉 团建攻略
 ![avatar](tu1.jpg)
+
+## 滑雪大类
+1. 军都山滑雪场
+![avatar](军都山滑雪.gif)
+2. 静之湖滑雪场
+![avatar](静之湖滑雪.jpg)
+3. 温都水城滑雪场
+![avatar](温都水城滑雪.jpg)
+
+## 聚餐大类
+
+
+## 温泉大类
+1. 静之湖汤泉
+2. 九华山庄主题公园
+3. 温都水城
+
+## 出行大类
+
+## 套餐
+1. 高端大气3选2
+  - 军都山滑雪+聚餐
+  - 九华山庄温泉+聚餐
+
+2. 经济全能型
+  - 温都水城一套
+  - 静之湖一套
+
+3. 价格成谜
