--- a/FlaskWebProject1/FlaskWebProject1/static/markdown/团建.md
+++ b/FlaskWebProject1/FlaskWebProject1/static/markdown/团建.md
@@ -2,7 +2,7 @@
 
 <img src="tu1.jpg" style="zoom:40%" /> +
 <img src="九华山庄1.jpg" style="zoom:40%" /> +
-<img src="huo1.jpg" style="zoom:40%" /> = 24 or 28 or 29 团建
+<img src="huo1.jpg" style="zoom:40%" /> = 24（周四） or 28（周一） or 29（周二） 团建
 
 ## 滑雪大类
 - 滑雪价格只包含雪票（含雪具），每人押金300可自选其他用具（雪服30，头盔，柜子20）建议自费
@@ -34,7 +34,7 @@
 ![avatar](温都水城.jpg)
 
   - 价格：未知（网上评论价格有贵的也有便宜的，美团上1小时69算贵的）
-  - 场地条件：据说是1高1中1初（继续调查)
+  - 场地条件：据说是1高1中1初（继续调查)，网上评论雪场条件不太好
   - 交通条件：距离市区最近
   - 优点：交通方便，滑雪+温泉+火锅可以容易的达成
   - 缺点：雪道和温泉的评价略逊于其他选项，评价集中于亲子
@@ -98,11 +98,28 @@
 
 ## 出行与时间
 
-<img src="出发点到终点.PNG" style="zoom:80%" />
+<img src="出发点到终点.PNG" style="zoom:70%" />
 
-<img src="高端移动.PNG" style="zoom:80%" />
+1. 出发：1小时杂事buff + 1小时路上 = 2小时 
+  - 最迟11：00到达滑雪场
+  - 滑雪场普遍开门时间9：00，军都山8：00，提早可以玩更多
+2. 滑雪：准备0.5小时+滑雪4小时+退租0.5小时 = 5小时
+  - 最迟16：00需要退出滑雪场
 
-## 套餐
+
+<img src="高端移动.PNG" style="zoom:70%" />
+
+3. 聚餐：2~3小时 + 1路程时间（全能型可以省略）
+  - 如果温泉，最迟19：00结束
+4. 温泉：3小时
+5. 返回：1小时
+  - 单独开车的人可以较晚回
+  - 为安全起见，建议最迟11：00返回
+
+
+## 方案
+- 行是指打的或租车的情况下花费的人均金额
+- 滑雪前保证吃饱不饿即可，过多饮食会影响滑雪
 1. 高端大气3选2
   - 军都山滑雪180 + 餐100 + 行50
   - 能玩的人越多，玩的越high
@@ -121,4 +138,4 @@
 
 5. 就是要玩型
   - 军都山180 + 九华山庄78 + 出行50
-  - 行程紧凑，避免集体聚餐，时间全用来玩
+  - 行程紧凑，减少集体聚餐时间，大部分时间全用来玩
